[project]
name = "probingplatypus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = ["matplotlib==3.10.6", "mplcursors==0.6", "polars==1.33.0"]


[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = ["I"]
extend-safe-fixes = ["F401"]
