[project]
name = "probingplatypus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = ["matplotlib==3.10.8", "mplcursors==0.7.1", "polars==1.40.0"]


[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = ["I"]
extend-safe-fixes = ["F401"]
